ipc/ipdl/test/ipdl/error/trans_WrongDirection3.ipdl
sync protocol trans_WrongDirection3 {

parent:
    sync Msg();
    __delete__();

state S1:
    send Msg goto S1;

start state _:
    recv __delete__;
};
